--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "job-auto-applier",
-  "version": "1.0.0",
+  "version": "3.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "puppeteer": "^21.5.0"
   }
 }
