--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
   "version": "3.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "echo 'Build complete'"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "puppeteer": "^21.5.0"
-  }
+    "puppeteer-core": "^21.5.0",
+    "@sparticuz/chromium": "^119.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "description": "Railway-optimized LinkedIn job application automation",
+  "keywords": ["linkedin", "automation", "railway", "puppeteer-core"],
+  "author": "Vamsidhar Reddy M <vdr1800@gmail.com>"
 }
